--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="main">
         <div class="load"></div>
 
-      
+        
         <div class="head">
             <h2>User profile</h2>
             <input type="text" id="search" placeholder="search">
@@ -29,10 +29,10 @@
 
 
         </div>
-        <a href="http://"></a>
+        <button class="show">Show more</button> 
     </div>
 
-    <script src="index.js"></script>
+    <script src="index1.js"></script>
 </body>
 
 </html>
