--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="show">Show more</button> 
     </div>
 
-    <script src="index1.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
