--- a/detail.html
+++ b/detail.html
@@ -13,10 +13,13 @@
 
 <body>
     
-    <div class="main1">    
+    <div class="main1"> 
+        <div class="header">
+            <a href="./index.html" class="back"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+
+        </div>   
         <div class="load"></div>
     
-        <a href="./index.html" class="back"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
         <div class="head">
             <h1>User Details</h1>
         </div>
